Update CMakeLists to register new HTTP server component

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,18 +1,3 @@
-idf_component_register(
-    SRCS
-        "main.c"
-        "global_state.c"
-        "i2c.c"
-        "thermal.c"
-        "vcore.c"
-        "mining.c"
-    INCLUDE_DIRS "."
-    REQUIRES
-        driver
-        freertos
-        nvs_flash
-        esp_event
-        esp_netif
-        esp_wifi
-        mbedtls
-)
+idf_component_register(SRCS "main.c" "http_server.c"
+                       INCLUDE_DIRS "."
+                       REQUIRES esp_http_server json esp_wifi nvs_flash driver)
