Initialize CMakeLists.txt for bitaxe_ultra project

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,4 @@
-idf_component_register(SRCS "main.c" "http_server.c"
-                       INCLUDE_DIRS "."
-                       REQUIRES esp_http_server json esp_wifi nvs_flash driver)
+cmake_minimum_required(VERSION 3.5)
+
+include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+project(bitaxe_ultra)
